--- a/deploy.yml
+++ b/deploy.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Pull Docker Image
       docker_image:
-        name: "dibyaruppal/calculator"
+        name: "dibyaruppal/calculator_python"
         source: pull
       register: docker_pull_result
 
@@ -19,4 +19,4 @@
         name: docker
         state: started
     - name: Running container
-      shell: docker run -it -d --name calculator_python dibyaruppal/calculator
+      shell: docker run -it -d --name calculator_python dibyaruppal/calculator_python
